--- a/frontend/src/dashboard.css
+++ b/frontend/src/dashboard.css
@@ -20,24 +20,59 @@
 .toggle-container {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   margin-bottom: 20px;
 }
 
-.toggle-option {
-  padding: 10px 25px;
-  cursor: pointer;
-  font-size: 16px;
-  font-weight: 500;
-  border: none;
-  border-radius: 25px;
-  background-color: transparent;
-  transition: background-color 0.3s ease, color 0.3s ease;
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  margin-right: 10px;
 }
 
-.toggle-option.active {
-  background-color: #b387ff;
-  color: white;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:checked+.slider {
+  background-color: #4caf50;
+}
+
+input:checked+.slider:before {
+  transform: translateX(26px);
+}
+
+.toggle-label {
+  font-size: 1rem;
+  font-weight: bold;
 }
 
 /* Patient Information Styling */
