--- a/frontend/src/ChatbotButton.css
+++ b/frontend/src/ChatbotButton.css
@@ -4,7 +4,6 @@
     border: none;
     cursor: pointer;
     z-index: 1000;
-    /* Ensure it's on top of other elements */
 }
 
 .chatbot-button.animating {
@@ -17,9 +16,7 @@
 
 .chatbot-button img {
     width: 60px;
-    /* Button size */
     height: 60px;
-    /* Button size */
 }
 
 .chat-popup {
@@ -27,9 +24,9 @@
     width: 300px;
     height: 500px;
     background-color: white;
-    border: 10px seashell #ccc;
+    border: 1px solid #ccc;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     z-index: 1001;
     display: flex;
     flex-direction: column;
@@ -37,26 +34,43 @@
 
 .chat-header {
     padding: 10px;
-    background-color: #f1f1f1;
-    border-radius: 10px 10px 0 0;
+    background-color: #0078d7;
+    color: white;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px 10px 0 0;
+}
+
+.chat-title {
+    font-size: 18px;
+    margin: 0;
+    flex-grow: 1;
+    text-align: center;
+}
+
+.close-button {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
 }
 
 .chat-body {
     padding: 10px;
-    height: 400px;
+    height: 380px;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: calc(100% - 5px);
     box-sizing: border-box;
 }
 
 .chat-footer {
     padding: 10px;
     background-color: #f1f1f1;
+    display: flex;
 }
 
 .message-bubble {
@@ -64,14 +78,8 @@
     margin: 4px 10px;
     border-radius: 15px;
     display: inline-block;
-    max-width: calc(100% - 20px);
+    max-width: 90%;
     word-wrap: break-word;
-    box-sizing: border-box;
-    text-align: left;
-}
-
-.message-bubble p {
-    margin: 0;
 }
 
 .message-bubble.user {
@@ -96,7 +104,7 @@
 
 .send-button {
     padding: 6px 15px;
-    background-color: #0084ff;
+    background-color: #0078d7;
     color: white;
     border: none;
     border-radius: 20px;
