--- a/frontend/src/ChatbotButton.css
+++ b/frontend/src/ChatbotButton.css
@@ -33,8 +33,8 @@
     border-radius: 15px;
     position: absolute;
     top: -40px;
-    /* Adjust as needed */
-    left: 0;
+    left: calc(-175% - 20px);
+    /* Move message to the left of the icon */
     white-space: nowrap;
 }
 
@@ -42,7 +42,8 @@
     content: "";
     position: absolute;
     bottom: -10px;
-    left: 20px;
+    left: 100%;
+    /* Arrow points to the icon */
     border-width: 10px;
     border-style: solid;
     border-color: #0078d7 transparent transparent transparent;
