--- a/frontend/src/dashboard.css
+++ b/frontend/src/dashboard.css
@@ -113,6 +113,17 @@ input:checked+.slider:before {
   transform: translateY(-5px);
 }
 
+friendly-card {
+  /* Darker shadow */
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2);
+}
+
+.friendly-card:hover {
+  transform: translateY(-5px);
+  /* Slightly darker shadow on hover */
+  box-shadow: 0 8px 14px rgba(0, 0, 0, 0.25);
+}
+
 .card h3 {
   font-size: 20px;
   color: #0078d7;
